--- a/README
+++ b/README
@@ -1,1 +1,5 @@
 A collection of notebooks that will run in a single conda environment (pinned to available tools at the time of demonstration), showing a few workflows that are possible using OpenFF tools.
+
+```
+mamba create -n 2023-vignettes openff-toolkit-examples openff-nagl openff-nagl-models openff-bespokefit chemper
+```
