Update colab setup

--- a/G-PDB-to-simulation.ipynb
+++ b/G-PDB-to-simulation.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2492b2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/master/colab_setup.ipynb\n",
+    "%run colab_setup.ipynb"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "34131dc6",
    "metadata": {},
@@ -11,6 +23,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "461250f5",
    "metadata": {},
@@ -48,6 +61,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "457a114d",
    "metadata": {},
@@ -85,6 +99,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "188a7ec0",
    "metadata": {},
