--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -6,20 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# https://gist.github.com/mfansler/e1c29a70f064af0f52171ca8ae90d1a6\n",
-    "!wget -O miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-py37_4.10.3-Linux-x86_64.sh\n",
-    "!chmod +x miniconda.sh\n",
-    "!bash ./miniconda.sh -b -f -p /usr/local\n",
-    "!rm miniconda.sh\n",
-    "!conda config --add channels conda-forge\n",
-    "!conda install -y mamba\n",
-    "!mamba update -qy --all\n",
-    "!mamba clean -qafy\n",
-    "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/colab/environment.yaml\n",
-    "import sys, os\n",
-    "\n",
-    "sys.path.append('/usr/local/lib/python3.10/site-packages/')\n",
-    "os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"0\""
+    "!pip install -q condacolab\n",
+    "import condacolab\n",
+    "condacolab.install()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/environment.yaml\n",
+    "!mamba env update -n base -f environment.yaml"
    ]
   }
  ],
