--- a/R-custom_substructures_and_nagl.ipynb
+++ b/R-custom_substructures_and_nagl.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe53ebfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/master/colab_setup.ipynb\n",
+    "%run colab_setup.ipynb"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "235c0683",
    "metadata": {},
@@ -89,6 +101,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fa53e857",
    "metadata": {},
@@ -199,6 +212,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "47b839ac",
    "metadata": {},
@@ -486,6 +500,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1664f836",
    "metadata": {},
@@ -696,6 +711,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30d5efd7",
    "metadata": {},
@@ -749,6 +765,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e5f7e158",
    "metadata": {},
@@ -816,6 +833,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3922115c",
    "metadata": {},
@@ -909,6 +927,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "46d5b39c",
    "metadata": {},
@@ -1149,6 +1168,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4c35ef23",
    "metadata": {},
@@ -1707,6 +1727,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f5dcd35e",
    "metadata": {},
