Add files to local path

--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -17,8 +17,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/environment.yaml\n",
-    "!mamba env update -n base -f environment.yaml"
+    "!git clone https://github.com/openforcefield/2023-workshop-vignettes.git\n",
+    "!mkdir -p inputs\n",
+    "!cp 2023-workshop-vignettes/inputs/* inputs/\n",
+    "!cp 2023-workshop-vignettes/utils.py .\n",
+    "!mamba env update -q -n base -f 2023-workshop-vignettes/environment.yaml"
    ]
   }
  ],
