Set up automated linting

--- a/G-PDB-to-simulation.ipynb
+++ b/G-PDB-to-simulation.ipynb
@@ -52,12 +52,11 @@
    ],
    "source": [
     "from openff.toolkit import Molecule, Topology, ForceField\n",
-    "ligand = Molecule.from_file('inputs/PT2385.sdf')\n",
-    "top = Topology.from_pdb('inputs/solvated_complex.pdb',\n",
-    "                       unique_molecules=[ligand]\n",
-    "                       )\n",
+    "\n",
+    "ligand = Molecule.from_file(\"inputs/PT2385.sdf\")\n",
+    "top = Topology.from_pdb(\"inputs/solvated_complex.pdb\", unique_molecules=[ligand])\n",
     "ff = ForceField(\"openff-2.0.0.offxml\", \"ff14sb_off_impropers_0.0.3.offxml\")\n",
-    "sys = ff.create_openmm_system(top)\n"
+    "sys = ff.create_openmm_system(top)"
    ]
   },
   {
@@ -131,16 +130,16 @@
    "source": [
     "import mdtraj\n",
     "import nglview\n",
+    "\n",
     "trajectory: mdtraj.Trajectory = mdtraj.load(\n",
     "    \"trajectory.dcd\", top=mdtraj.Topology.from_openmm(top.to_openmm())\n",
     ")\n",
     "\n",
     "view = nglview.show_mdtraj(trajectory.image_molecules())\n",
     "view.add_representation(\"line\", selection=\"water\")\n",
-    "view.add_representation(\"hyperball\", \n",
-    "                        radiusSize=1, \n",
-    "                        radiusScale=0.5,\n",
-    "                        selection=\"not protein and not water\")\n",
+    "view.add_representation(\n",
+    "    \"hyperball\", radiusSize=1, radiusScale=0.5, selection=\"not protein and not water\"\n",
+    ")\n",
     "view"
    ]
   },
