--- a/G-retrieve-qcarchive-torsiondrive.ipynb
+++ b/G-retrieve-qcarchive-torsiondrive.ipynb
@@ -48,8 +48,9 @@
    "source": [
     "import warnings\n",
     "\n",
-    "warnings.filterwarnings('ignore')\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "import logging\n",
+    "\n",
     "logging.getLogger(\"openff.toolkit\").setLevel(logging.ERROR)"
    ]
   },
@@ -136,32 +137,31 @@
     ")\n",
     "\n",
     "# Pull down the energy result records from the 'OpenFF BCC Refit Study COH v1.0' dataset.\n",
-    "#energy_result_collection = BasicResultCollection.from_server(\n",
+    "# energy_result_collection = BasicResultCollection.from_server(\n",
     "#    client=qc_client,\n",
     "#    datasets=\"OpenFF BCC Refit Study COH v1.0\",\n",
     "#    spec_name=\"resp-2-vacuum\"\n",
-    "#)\n",
-    "#print(energy_result_collection)\n",
+    "# )\n",
+    "# print(energy_result_collection)\n",
     "\n",
     "# Pull down the optimization records from both the 'OpenFF Gen 2 Opt Set 3 Pfizer Discrepancy' and\n",
     "# 'OpenFF Gen 2 Opt Set 4 eMolecules Discrepancy' datasets.\n",
-    "#optimization_result_collection = OptimizationResultCollection.from_server(\n",
+    "# optimization_result_collection = OptimizationResultCollection.from_server(\n",
     "#    client=qc_client,\n",
     "#    datasets=[\n",
     "#        \"OpenFF Gen 2 Opt Set 3 Pfizer Discrepancy\",\n",
     "#        \"OpenFF Gen 2 Opt Set 4 eMolecules Discrepancy\",\n",
     "#    ],\n",
     "#    spec_name=\"default\",\n",
-    "#)\n",
-    "#print(optimization_result_collection)\n",
+    "# )\n",
+    "# print(optimization_result_collection)\n",
     "\n",
     "# Pull down the torsion drive records from the 'OpenFF Rowley Biaryl v1.0' dataset.\n",
     "torsion_drive_result_collection = TorsionDriveResultCollection.from_server(\n",
     "    client=qc_client,\n",
-    "    #datasets=\"OpenFF Rowley Biaryl v1.0\",\n",
-    "    #datasets=\"OpenFF Protein Capped 3-mer Omega v1.0\",\n",
+    "    # datasets=\"OpenFF Rowley Biaryl v1.0\",\n",
+    "    # datasets=\"OpenFF Protein Capped 3-mer Omega v1.0\",\n",
     "    datasets=\"OpenFF Protein Capped 3-mer Backbones v1.0\",\n",
-    "    \n",
     "    spec_name=\"default\",\n",
     ")\n",
     "print(torsion_drive_result_collection)"
@@ -931,18 +931,16 @@
     "from matplotlib import pyplot\n",
     "import numpy as np\n",
     "from openff.units import unit\n",
-    "energy_grid = np.zeros((24,24))\n",
-    "for grid_id, qc_conformer in zip(\n",
-    "    molecule.properties[\"grid_ids\"], molecule.conformers\n",
-    "):\n",
     "\n",
+    "energy_grid = np.zeros((24, 24))\n",
+    "for grid_id, qc_conformer in zip(molecule.properties[\"grid_ids\"], molecule.conformers):\n",
     "    qc_energy = torsion_drive_record.final_energy_dict[grid_id]\n",
-    "    \n",
-    "    grid_tuple = [int(i) for i in grid_id.strip(\"[]\").split(',')]\n",
-    "    phi_bin = (grid_tuple[0]+165) / 15\n",
-    "    psi_bin = (grid_tuple[1]+165) / 15\n",
-    "    #print(phi_bin, psi_bin)\n",
-    "    #qc_energy_kcal_per_mol = (qc_energy * unit.hartree).to(unit.kilo)\n",
+    "\n",
+    "    grid_tuple = [int(i) for i in grid_id.strip(\"[]\").split(\",\")]\n",
+    "    phi_bin = (grid_tuple[0] + 165) / 15\n",
+    "    psi_bin = (grid_tuple[1] + 165) / 15\n",
+    "    # print(phi_bin, psi_bin)\n",
+    "    # qc_energy_kcal_per_mol = (qc_energy * unit.hartree).to(unit.kilo)\n",
     "    energy_grid[int(psi_bin), int(phi_bin)] = qc_energy\n",
     "    print(f\"{grid_id} E={qc_energy:.4f} Ha\")"
    ]
@@ -974,7 +972,7 @@
     }
    ],
    "source": [
-    "energy_grid -= energy_grid[0,0]\n",
+    "energy_grid -= energy_grid[0, 0]\n",
     "pyplot.imshow(energy_grid, origin=\"lower\")\n",
     "pyplot.title(\"Val-Ala-Val - central backbone torsiondrive (Hartree)\")\n",
     "pyplot.colorbar()\n",
