Set `LD_LIBRARY_PATH` to satisfy OpenMM

--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -23,6 +23,15 @@
     "!cp 2023-workshop-vignettes/utils.py .\n",
     "!mamba env update -q -n base -f 2023-workshop-vignettes/environment.yaml"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
+   ]
   }
  ],
  "metadata": {
