Add colab setup to each notebook

--- a/G-vectorized-representations.ipynb
+++ b/G-vectorized-representations.ipynb
@@ -3,9 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3695e71-18c0-4891-90da-f733f11af80c",
+   "id": "383d03c8",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/update-install-instructions/colab_setup.ipynb\n",
+    "%run colab_setup.ipynb"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "e3695e71-18c0-4891-90da-f733f11af80c",
+   "metadata": {},
    "source": [
     "# Vectorized representations"
    ]
@@ -39,6 +49,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "955df27d-5f32-4b9a-9f28-017a8182012a",
    "metadata": {},
@@ -57,6 +68,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "62f02d2b-461b-49a3-8090-a9b7eae39662",
    "metadata": {},
@@ -81,6 +93,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3b03d184-3da6-4e4a-a353-1cceb2a23151",
    "metadata": {},
@@ -107,6 +120,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0ccc44b5-5f8a-4392-b5ef-5dea1e8efcc4",
    "metadata": {},
@@ -137,6 +151,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "fca0a4c2-8146-4e97-b149-4d1b2f9f03e4",
    "metadata": {},
