--- a/G-retrieve-qcarchive-torsiondrive.ipynb
+++ b/G-retrieve-qcarchive-torsiondrive.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/update-install-instructions/colab_setup.ipynb\n",
-    "%run colab_setup.ipynb"
+    "%run colab_setup.ipynb\n",
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
   },
   {
