--- a/G-vectorized-representations.ipynb
+++ b/G-vectorized-representations.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sage = ForceField(\"openff-2.0.0.offxml\")\n",
+    "sage = ForceField(\"openff_unconstrained-2.0.0.offxml\")\n",
     "molecule = Molecule.from_smiles(r\"F\\C=C/[F]\")\n",
     "interchange = Interchange.from_smirnoff(sage, [molecule])\n",
     "\n",
