Update SMILES notebook

--- a/G-SMILES-to-parameters.ipynb
+++ b/G-SMILES-to-parameters.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "33da1e9d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/update-install-instructions/colab_setup.ipynb\n",
+    "%run colab_setup.ipynb\n",
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "ac6003c1",
    "metadata": {},
