Update `ipywidgets` configuration

--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -33,6 +33,16 @@
    "source": [
     "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from google.colab import output\n",
+    "output.enable_custom_widget_manager()"
+   ]
   }
  ],
  "metadata": {
