Try slimming down environments

--- a/R-custom_substructures_and_nagl.ipynb
+++ b/R-custom_substructures_and_nagl.ipynb
@@ -9,7 +9,8 @@
    "source": [
     "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
     "%run colab_setup.ipynb\n",
-    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/\n",
+    "!mamba install \"openff-nagl-models =0.0.2\" \"openff-nagl = 0.2.2\" -c conda-forge -yq"
    ]
   },
   {
