--- a/G-retrieve-qcarchive-torsiondrive.ipynb
+++ b/G-retrieve-qcarchive-torsiondrive.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "!wget https://raw.githubusercontent.com/openforcefield/2023-workshop-vignettes/main/colab_setup.ipynb\n",
     "%run colab_setup.ipynb\n",
-    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/"
+    "%env LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$CONDA_PREFIX/lib/\n",
+    "!mamba install qcportal -c conda-forge -yq"
    ]
   },
   {
