Make some commands quieter

--- a/colab_setup.ipynb
+++ b/colab_setup.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!git clone https://github.com/openforcefield/2023-workshop-vignettes.git\n",
+    "!git clone -q https://github.com/openforcefield/2023-workshop-vignettes.git\n",
     "!mkdir -p inputs\n",
     "!cp 2023-workshop-vignettes/inputs/* inputs/\n",
     "!cp 2023-workshop-vignettes/utils.py .\n",
