update interchange export notebook

--- a/Y-interchange-gromacs-export.ipynb
+++ b/Y-interchange-gromacs-export.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "001eb631",
+   "metadata": {},
+   "source": [
+    "# TODO: Add gromacs to env, warn about detailed nonbonded settings being different (or fix them if we know how),  remove outdated/misleading prose"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "575da14f",
@@ -17,19 +25,7 @@
    "id": "d051f4a7-9a72-418b-b068-8d2e330a8db6",
    "metadata": {},
    "source": [
-    "# Solvating and equilibrating a ligand in a box of water\n",
-    "\n",
-    "<details>\n",
-    "    <summary><small>▼ Click here for dependency installation instructions</small></summary>\n",
-    "    The simplest way to install dependencies is to use the Interchange examples environment. From the root of the cloned openff-interchange repository:\n",
-    "    \n",
-    "    conda env create --name interchange-examples --file devtools/conda-envs/examples_env.yaml \n",
-    "    conda activate interchange-examples\n",
-    "    pip install -e .\n",
-    "    cd examples\n",
-    "    jupyter notebook ligand_in_water.ipynb\n",
-    "    \n",
-    "</details>"
+    "# Making a box of mixed solvents\n"
    ]
   },
   {
@@ -365,7 +361,7 @@
    "id": "07193bb0",
    "metadata": {},
    "source": [
-    "# Appendix B: In GROMACS and AMBER"
+    "# Appendix B: In GROMACS and AMBER\n"
    ]
   },
   {
