Update micelle self assembly to Interchange 0.3.3

--- a/Y-micelle-self-assembly.ipynb
+++ b/Y-micelle-self-assembly.ipynb
@@ -21,33 +21,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1949e989",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "The OpenEye Toolkits are found to be installed but not licensed and therefore will not be used.\n",
-      "The OpenEye Toolkits require a (free for academics) license, see https://docs.eyesopen.com/toolkits/python/quickstart-python/license.html\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4c42d150eb224e24838c3ecf333ccadd",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from io import StringIO\n",
     "\n",
@@ -71,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "9031fe9a",
    "metadata": {
     "tags": []
@@ -90,39 +69,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "9eda13a1",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: : Failed due to unspecified stereochemistry\n",
-      "Warning (not error because allow_undefined_stereo=True): OEMol has unspecified stereochemistry. oemol.GetTitle(): \n",
-      "Problematic atoms are:\n",
-      "Atom atomic num: 15, name: , idx: 19, aromatic: False, chiral: True with bonds:\n",
-      "bond order: 1, chiral: False to atom atomic num: 8, name: , idx: 18, aromatic: False, chiral: False\n",
-      "bond order: 2, chiral: False to atom atomic num: 8, name: , idx: 20, aromatic: False, chiral: False\n",
-      "bond order: 1, chiral: False to atom atomic num: 8, name: , idx: 21, aromatic: False, chiral: False\n",
-      "bond order: 1, chiral: False to atom atomic num: 8, name: , idx: 22, aromatic: False, chiral: False\n",
-      "\n",
-      "Warning (not error because allow_undefined_stereo=True): RDMol has unspecified stereochemistry. Undefined chiral centers are:\n",
-      " - Atom P (index 46)\n",
-      "\n",
-      "Warning (not error because allow_undefined_stereo=True): OEMol has unspecified stereochemistry. oemol.GetTitle(): \n",
-      "Problematic atoms are:\n",
-      "Atom atomic num: 15, name: , idx: 46, aromatic: False, chiral: True with bonds:\n",
-      "bond order: 1, chiral: False to atom atomic num: 8, name: , idx: 45, aromatic: False, chiral: False\n",
-      "bond order: 2, chiral: False to atom atomic num: 8, name: , idx: 47, aromatic: False, chiral: False\n",
-      "bond order: 1, chiral: False to atom atomic num: 8, name: , idx: 48, aromatic: False, chiral: False\n",
-      "bond order: 1, chiral: False to atom atomic num: 8, name: , idx: 49, aromatic: False, chiral: False\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "water = Molecule.from_smiles(\"O\")\n",
     "na = Molecule.from_smiles(\"[Na+]\")\n",
@@ -137,7 +89,7 @@
     "target_volume = total_mass / target_density\n",
     "box_size = np.ones(3) * np.cbrt(target_volume)\n",
     "\n",
-    "traj, resname = pack_box(\n",
+    "top = pack_box(\n",
     "    molecules,\n",
     "    n_copies,\n",
     "    box_size = box_size,\n",
@@ -147,41 +99,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "f24132cf",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "top = Topology.from_mdtraj(traj.topology, unique_molecules=[dlpc, water, na, cl])\n",
-    "top.set_positions(traj.xyz.reshape(-1, 3) * unit.nanometer)\n",
-    "top.box_vectors = traj.unitcell_vectors.reshape(3, 3) * unit.nanometer"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "b18b34f3",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f4653d655f64a239c8ad8292b315d4a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "NGLWidget()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "w = visualize(top)\n",
     "w.add_representation(\"line\", selection=\"water\")\n",
@@ -190,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "76e2623c",
    "metadata": {
     "tags": []
@@ -204,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "bbdbfea4",
    "metadata": {
     "tags": []
@@ -216,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "8541c4d4",
    "metadata": {
     "tags": []
@@ -228,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "903e02c6",
    "metadata": {
     "tags": []
@@ -241,23 +164,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "7be76a3b",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "openmm_system = interchange.to_openmm()\n",
     "openmm_topology = interchange.to_openmm_topology()\n",
@@ -275,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "d3db2ebd",
    "metadata": {
     "tags": []
@@ -313,20 +225,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "41a7d618",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Minimised to -191555.3813474467 kJ/mol with maximum force 2637.890863463706 kJ/(nm mol)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "simulation.minimizeEnergy(\n",
     "    tolerance=openmm.unit.Quantity(\n",
@@ -352,20 +256,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "9c851b84",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5260 steps in 10.0 second (3.7872 nanosecond / hour)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "simulation.context.setVelocitiesToTemperature(temperature)\n",
     "\n",
@@ -384,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "cab1fcb5",
    "metadata": {
     "tags": []
@@ -406,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1d7ea7bf",
    "metadata": {
     "tags": []
@@ -445,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "88087b7c",
    "metadata": {
     "tags": []
@@ -463,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "8f60a48a-7e2a-4cce-926e-ddc13e35a599",
    "metadata": {
     "tags": []
@@ -476,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "8d7839a1-3f9a-434a-ac8b-e7a7a2006e8b",
    "metadata": {
     "tags": []
@@ -489,27 +385,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "48290c3f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "06283a0de6924e498eca6576c7506026",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "NGLWidget(max_frame=500)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "view = nglview.show_mdtraj(trajectory)\n",
     "lipid_resnames_selection = ' OR '.join(lipid_resnames)\n",
@@ -523,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "813f1872-b326-480f-ab64-1898b99190c6",
    "metadata": {
     "tags": []
@@ -545,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "f3c358a6-2ae7-44c6-938e-43c5174ec823",
    "metadata": {
     "tags": []
@@ -578,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
