Remove some prose

--- a/Y-interchange-gromacs-export.ipynb
+++ b/Y-interchange-gromacs-export.ipynb
@@ -1,14 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "001eb631",
-   "metadata": {},
-   "source": [
-    "# TODO: Add gromacs to env, warn about detailed nonbonded settings being different (or fix them if we know how),  remove outdated/misleading prose"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "575da14f",
@@ -21,6 +13,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d051f4a7-9a72-418b-b068-8d2e330a8db6",
    "metadata": {},
@@ -65,20 +58,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "65b68081-8655-4269-9fa8-9395db3f8230",
    "metadata": {},
    "source": [
     "## Construct the topology\n",
     "\n",
-    "In this example we'll construct a topology consisting of one ligand in a cubic box of length 4 nanometers. For simplicity, we will use a prepared PDB file  (`solvated.pdb`) with the same number of waters, molecule and atom ordering, etc. We'll also use _mapped_ SMILES when creating `Molecule` objects to ensure the atom ordering matches. (Atom ordering is not strictly a part of SMILES and therefore liable to be changed with updates to RDKit.)\n",
-    "\n",
-    "This can be extended or modified by i.e.\n",
-    "* Replacing this sample ligand with a different ligand of interest - substitute out the ligand SMILES\n",
-    "* Using a different number of water molecules - substitute out the `2100` used below\n",
-    "* Adding ions or co-solvents into the box - add more `Molecule` object as desired\n",
-    "\n",
-    "For each of these modifications, a new PDB file would need to be generated."
+    "In this example we'll construct a topology consisting of one ligand in a cubic box of length 4 nanometers. For simplicity, we will use a prepared PDB file  (`solvated.pdb`) with the same number of waters, molecule and atom ordering, etc. We'll also use _mapped_ SMILES when creating `Molecule` objects to ensure the atom ordering matches. (Atom ordering is not strictly a part of SMILES and therefore liable to be changed with updates to RDKit.)"
    ]
   },
   {
@@ -92,11 +79,12 @@
     "    \"[H:7][C@:6]1([C:13](=[C:11]([C:9](=[O:10])[O:8]1)[O:12][H:19])[O:14][H:20])[C@:3]([H:4])([C:2]([H:16])([H:17])[O:1][H:15])[O:5][H:18]\"\n",
     ")\n",
     "dmso = Molecule.from_smiles(\"CS(=O)C\")\n",
-    "ethanol = Molecule.from_smiles('CCO')\n",
+    "ethanol = Molecule.from_smiles(\"CCO\")\n",
     "water = Molecule.from_mapped_smiles(\"[H:2][O:1][H:3]\")"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f97cda9e-b0a9-4788-b3c7-13d8b54c4aac",
    "metadata": {},
@@ -135,6 +123,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "64b7ea41-b4c9-4ae0-95dd-416a7fb0299f",
    "metadata": {},
@@ -155,6 +144,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "da7781fc-1adb-4ba9-af97-7c64649f36ef",
    "metadata": {},
@@ -191,6 +181,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a8548886-a0e5-408a-be1d-5ca13577246a",
    "metadata": {},
@@ -276,6 +267,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ad40a034-ccee-4417-a42c-01b167714b0d",
    "metadata": {},
@@ -319,6 +311,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e43fa4bf",
    "metadata": {},
@@ -357,6 +350,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "07193bb0",
    "metadata": {},
@@ -977,19 +971,21 @@
    ],
    "source": [
     "import nglview\n",
+    "\n",
     "trajectory: mdtraj.Trajectory = mdtraj.load(\n",
     "    \"md.xtc\", top=mdtraj.Topology.from_openmm(topology.to_openmm())\n",
     ")\n",
     "\n",
     "view = nglview.show_mdtraj(trajectory.image_molecules())\n",
     "view.add_representation(\"line\", selection=\"water\")\n",
-    "#view.add_representation(\n",
+    "# view.add_representation(\n",
     "#    \"hyperball\", radiusSize=1, radiusScale=0.5, selection=\"not protein and not water\"\n",
-    "#)\n",
-    "view\n"
+    "# )\n",
+    "view"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "8b42bc84-cd3a-4b29-9256-271f16e10b97",
    "metadata": {},
@@ -1011,6 +1007,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3a50ee8b",
    "metadata": {},
