Fix bespokefit vignette

--- a/G-PDB-bespokefit-to-simulation.ipynb
+++ b/G-PDB-bespokefit-to-simulation.ipynb
@@ -40,10 +40,11 @@
    "outputs": [],
    "source": [
     "!openff-bespoke executor run                          \\\n",
-    "    --file               \"inputs/PT2385.sdf\"          \\                        \n",
+    "    --file               \"inputs/PT2385.sdf\"          \\\n",
     "    --workflow           \"default\"                    \\\n",
     "    --output             \"PT2385.json\"                \\\n",
-    "    --output-force-field \"openff-2.0.0-PT2385.offxml\" \\\n",
+    "    --force-field        \"openff-2.1.0.offxml\"        \\\n",
+    "    --output-force-field \"openff-2.1.0-PT2385.offxml\" \\\n",
     "    --n-qc-compute-workers 1                          \\\n",
     "    --qc-compute-n-cores   10                         \\\n",
     "    --default-qc-spec xtb gfn2xtb none\n",
@@ -51,9 +52,9 @@
     "from openff.toolkit import ForceField\n",
     "\n",
     "ff = ForceField(\n",
-    "    \"openff-2.0.0-PT2385.offxml\", \n",
+    "    \"openff-2.1.0-PT2385.offxml\", \n",
     "    \"ff14sb_off_impropers_0.0.3.offxml\",\n",
-    ")\n"
+    ")"
    ]
   },
   {
