update interchange import with corrected downloads, visualization and pretty energy output

--- a/Y-from-openmm-xml.ipynb
+++ b/Y-from-openmm-xml.ipynb
@@ -19,14 +19,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e3ee15c0",
+   "metadata": {},
+   "source": [
+    "Grab an externally parameterized system (from the SAMPL6 challenge, used a non-SMIRNOFF FF), and show that we can load it into Interchange and evaluate energies."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e2f70b28",
+   "id": "20700146",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('complex.pdb', <http.client.HTTPMessage at 0x10f98d660>)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "!wget -q https://raw.githubusercontent.com/samplchallenges/SAMPL6/master/host_guest/SAMPLing/CB8-G3-0/OPENMM/complex.xml\n",
-    "!wget -q https://raw.githubusercontent.com/samplchallenges/SAMPL6/master/host_guest/SAMPLing/CB8-G3-0/OPENMM/complex.pdb"
+    "import urllib\n",
+    "url = (\n",
+    "    \"https://raw.githubusercontent.com/samplchallenges/SAMPL6/master/host_guest/SAMPLing/CB8-G3-0/\"\n",
+    ")\n",
+    "\n",
+    "urllib.request.urlretrieve(url + \"OPENMM/complex.xml\", \"complex.xml\")\n",
+    "urllib.request.urlretrieve(url + \"PDB/complex.pdb\", \"complex.pdb\")"
    ]
   },
   {
@@ -38,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a61d6b4b3cd24649867c7d68ab73a944",
+       "model_id": "a32ff032f61b46e6ae69035f0e540d78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -55,7 +79,8 @@
     "\n",
     "from openff.units.openmm import ensure_quantity\n",
     "\n",
-    "from openff.interchange.drivers import get_openmm_energies"
+    "from openff.interchange.drivers import get_openmm_energies\n",
+    "from openff.interchange.drivers.all import get_summary_data"
    ]
   },
   {
@@ -80,6 +105,32 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "644a095a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6bc0ea9536d54fac8638c8b220196606",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "NGLWidget()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import nglview\n",
+    "nglview.show_file('complex.pdb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c42ac165",
    "metadata": {},
    "outputs": [],
@@ -94,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7862e2e7",
    "metadata": {},
    "outputs": [
@@ -104,7 +155,7 @@
        "EnergyReport(energies={'Bond': <Quantity(170.605375, 'kilojoule / mole')>, 'Angle': <Quantity(893.205219, 'kilojoule / mole')>, 'Torsion': <Quantity(503.72436, 'kilojoule / mole')>, 'Nonbonded': <Quantity(-97697.9652, 'kilojoule / mole')>})"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,6 +163,75 @@
    "source": [
     "get_openmm_energies(inputted)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "45ed5aa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Angle</th>\n",
+       "      <th>Bond</th>\n",
+       "      <th>Electrostatics</th>\n",
+       "      <th>Torsion</th>\n",
+       "      <th>vdW</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>OpenMM</th>\n",
+       "      <td>893.205219</td>\n",
+       "      <td>170.605375</td>\n",
+       "      <td>-110747.150441</td>\n",
+       "      <td>503.72436</td>\n",
+       "      <td>13049.185455</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Angle        Bond  Electrostatics    Torsion           vdW\n",
+       "OpenMM  893.205219  170.605375  -110747.150441  503.72436  13049.185455"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_summary_data(inputted, _engines=[\"OpenMM\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa47e48b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -130,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
